# TuringMirror

./: .gitignore  README.md  data_prep_analysis.ipynb  explore_data.ipynb  fix_data_and_explore.ipynb  pyproject.toml  requirements.txt
analysis/: correlate_preference_and_attribution.ipynb  data_prep_analysis.ipynb
data/: README.md
data/fables/: multirun.yaml  shuffled.json
data/raw/: INFO.md
results/: README.md
results/attribution/: multirun.yaml
results/generator1=claude-2,generator2=human,model.name=claude-2/: results_corrected.jsonl
results/generator1=claude-2,generator2=human,model.name=gpt-3.5-turbo/: results.jsonl
results/generator1=claude-2,generator2=human,model.name=gpt-4/: results.jsonl  results_corrected.jsonl
results/generator1=gpt-3.5-turbo,generator2=claude-2,model.name=claude-2/: results.jsonl
results/generator1=gpt-3.5-turbo,generator2=claude-2,model.name=gpt-3.5-turbo/: results.jsonl
results/generator1=gpt-3.5-turbo,generator2=gpt-4,model.name=gpt-3.5-turbo/: results_corrected.jsonl
results/generator1=gpt-3.5-turbo,generator2=gpt-4,model.name=gpt-4/: results.jsonl  results_corrected.jsonl
results/generator1=gpt-3.5-turbo,generator2=human,model.name=claude-2/: results.jsonl
results/generator1=gpt-3.5-turbo,generator2=human,model.name=gpt-4/: results.jsonl  results_corrected.jsonl
results/generator1=gpt-4,generator2=claude-2,model.name=claude-2/: results.jsonl
scripts/: README.md  evaluate_model.py  evaluate_model_preference.py  extract_fables_morals.ipynb  generate_new_fable_from_moral.py  shuffle_dataset.ipynb
(+149 files in other folders)
