[tool.poetry]
name = "turingmirror"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
interlab = {git = "https://github.com/acsresearch/interlab.git"}
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
